--- a/Dibyendu Pal ( TCS ) 1.html
+++ b/Dibyendu Pal ( TCS ) 1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page 1</title>
 </head>
 <script src="Dibyendu Pal ( Javascript 1 ).js"></script>
 <link rel="stylesheet" href="Dibyendu Pal ( CSS 1 ).css">
